# cxx-doctor

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  clear.sh  doctor.sublime-project
doc/: node_syncronization.txt  rest_api.txt  session_info.txt
src/: Makefile  config.xml  crypting.cc  crypting.hh  device.cc  device.hh  disease.cc  disease.hh  doctor.cc  doctor.hh  handler.cc  handler.hh  inmate.cc  inmate.hh  insurance.cc  insurance.hh  ipage.hh  machine.cc  machine.hh  main.cc  md5.cc  md5.hh  medic.cc  medic.hh  patient.cc  patient.hh  register.cc  register.hh  servey.cc  servey.hh  settings.cc  settings.hh  syncer.cc  syncer.hh  user.cc  user.hh  visit.cc  visit.hh  win.hh
src/public/css/: all-patients.css  disease-search-list.css  doctor.css  edit-doctor.css  edit-patient.css  edit-servey-type.css  edit-servey.css  patient-search-list.css  popup.css  print.css  settings-machine.css  settings.css  top-panel.css
src/public/html/: index.html
src/public/js/: doctor.js
src/public/js/app/: all-patients.js  edit-doctor.js  edit-patient.js  edit-servey.js  gettext.js  menu.js  panel.js  utils.js
src/public/lang/: en.json  ru.json
src/public/tmpl/: all-patients.ejs  edit-doctor.ejs  edit-patient.ejs  edit-servey-abdomen.ejs  edit-servey.ejs  en-greeting.ejs  main-menu.ejs  patient-search-list.ejs  ru-greeting.ejs  ru-help.ejs  servey-report.ejs  settings-machine.ejs  settings.ejs  top-panel.ejs
src/views/: index.html  popup.html
